Filtering traits which have already been written for from the list of possible outcome types to write for in HOW_DOES_THIS_RESOLVE. Split outcomeType test into two tests